# attest

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
attest/: __init__.py  __main__.py  chunking.py  cli.py  config.py  demo.py  eval.py  grounding.py  hierarchical.py  ingest.py  interfaces.py  judge.py  lexical.py  normalize.py  query.py  retrieval.py  store.py  structure.py  verify.py
attest/backends/: __init__.py  local_embed.py  mock.py  openai_compat.py  rerank.py  vision_extract.py
attest/ui/: __init__.py  jobs.py  launch.py  server.py  state.py
attest/ui/static/: app.js  index.html  style.css
docs/: desktop-app.md  experiments.md  phase-1-design.md
examples/: photosynthesis.txt  qb_advanced_b1.json  qb_advanced_b2.json  qb_bookspecific.json  qb_eval.json  qb_eval2.json  qb_traps.json  qm_pdf_eval.json  questions.json  questions_hard.json  relativity_eval.json
tests/: test_chunking.py  test_dotenv.py  test_eval.py  test_grounding.py  test_hierarchical.py  test_hybrid.py  test_judge.py  test_lexical.py  test_local_embed.py  test_normalize.py  test_openai_compat.py  test_pipeline_mock.py  test_query.py  test_rerank.py  test_store.py  test_ui.py  test_verify.py  test_vision_extract.py
