[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attest"
version = "0.0.1"
description = "A local-model workbench for Apple Silicon where every operation comes with a reproducible trust signal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Runs anywhere (Linux/Mac) — needed to ingest real PDFs.
ingest = ["pypdf>=4.0"]
# Mac-only: the real model backends. Installed when you're on Apple Silicon.
mlx = ["mlx-lm>=0.20"]
# Development.
dev = ["pytest>=7.0"]

[project.scripts]
attest = "attest.cli:main"

[tool.setuptools.packages.find]
include = ["attest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
