[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attest"
version = "0.0.1"
description = "A local-model workbench for Apple Silicon where every operation comes with a reproducible trust signal."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Runs anywhere (Linux/Mac) — needed to ingest real PDFs.
ingest = ["pypdf>=4.0"]
# Real CPU embeddings (Linux/Mac) — meaning-aware retrieval without a GPU.
embed-local = ["sentence-transformers>=2.2"]
# Math-aware (vision) ingestion: render PDF pages to transcribe equations -> LaTeX.
vision = ["pymupdf>=1.24"]
# The desktop app: local server + native window (Linux/macOS).
ui = ["fastapi>=0.110", "uvicorn>=0.27", "python-multipart>=0.0.9", "pywebview>=5.0"]
# Mac-only: the real local model backends. Installed when you're on Apple Silicon.
mlx = ["mlx-lm>=0.20"]
# Development.
dev = ["pytest>=7.0"]

[project.scripts]
attest = "attest.cli:main"

[tool.setuptools.packages.find]
include = ["attest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
